Now using and copiling for java 8
Signed-off-by: alfonsoLeandro <leandroalfonsoporley@gmail.com>